# Q-IoT

./: README.md  main.py  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
tracker/: README.md
tracker/slidev/: pnpm-lock.yaml
